fix scrollbar on some devices.

--- a/assets/less/base/ui/userpanel.less
+++ b/assets/less/base/ui/userpanel.less
@@ -111,7 +111,7 @@
 	width: 100%;
 	@media @desktop {
 		height: ~"calc(100% - 12rem - 1px)";
-		overflow: scroll;
+		overflow: auto;
 	}
 	z-index: 3;
 }
